--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
 CacheControl==0.13.1
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
+channels==4.0.0
+channels-redis==4.1.0
 charset-normalizer==3.2.0
+constantly==15.1.0
 cryptography==41.0.3
+daphne==4.0.0
 Django==4.2.4
 django-cors-headers==4.2.0
 django-environ==0.10.0
@@ -24,7 +32,9 @@ googleapis-common-protos==1.60.0
 grpcio==1.57.0
 grpcio-status==1.57.0
 httplib2==0.22.0
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
 msgpack==1.0.5
 Pillow==10.0.0
 proto-plus==1.22.3
@@ -33,12 +43,20 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.8.0
+pyOpenSSL==23.2.0
 pyparsing==3.1.1
 pytz==2023.3
+redis==5.0.0
 requests==2.31.0
 rsa==4.9
+service-identity==23.1.0
 six==1.16.0
 sqlparse==0.4.4
+Twisted==22.10.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
+typing_extensions==4.7.1
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.16
+zope.interface==6.0
