--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -19,7 +19,7 @@ RUN mkdir $APP_HOME/media
 WORKDIR $APP_HOME
 
 # install dependencies
-RUN pip3 install -r requirements.txt
+RUN pip install -r requirements.txt
 
 # copy entrypoint-prod.sh
 COPY ./config/docker/entrypoint.prod.sh $APP_HOME
