fixed(deploy): fixed Dockerfile

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,6 +6,7 @@ FROM python:3.11.5-alpine3.17
 
 # create directory for the app user
 RUN mkdir -p /home/app
+RUN mkdir -p /home/app/web
 
 # create the app user
 RUN addgroup -S app && adduser -S app -G app
