--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,7 +6,6 @@ FROM python:3.11.5-alpine3.17
 
 # create directory for the app user
 RUN mkdir -p /home/app
-RUN mkdir -p /home/app/web
 
 # create the app user
 RUN addgroup -S app && adduser -S app -G app
@@ -19,7 +18,9 @@ WORKDIR $APP_HOME
 
 # install dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && \
+    apt-get install -y libpq-dev && \
+    pip install --no-cache-dir -r requirements.txt
 
 # copy entrypoint-prod.sh
 COPY ./config/docker/entrypoint.prod.sh $APP_HOME
