fixed(deploy): fixed Dockerfile

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,9 +18,7 @@ WORKDIR $APP_HOME
 
 # install dependencies
 COPY requirements.txt .
-RUN apt-get update && \
-    apt-get install -y libpq-dev && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt  
 
 # copy entrypoint-prod.sh
 COPY ./config/docker/entrypoint.prod.sh $APP_HOME
