--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
   listen 80;
 
   location / {
-    proxy_pass 3.37.239.49; 
+    proxy_pass http://3.37.239.49; 
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
