--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: web
     build:
       context: ./
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     command: gunicorn peach_market.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - .env
