--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,14 +7,15 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    command: gunicorn peach_market.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - .env
     expose:
       - 8000
     entrypoint:
       - sh
-      - config/docker/entrypoint.prod.sh
+      - /home/app/web/config/docker/entrypoint.prod.sh
+    ports:
+      - "8000:8000"
 
   nginx:
     container_name: nginx
