fixed(deploy): static files and database connect

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -12,5 +12,9 @@ server {
     proxy_set_header Host $host;
     proxy_redirect off;
   }
+  
+  location /static/ { # "/static/" 도메인에 도달하면 아래 alias를 수행
+    alias /home/app/web/static/; # 아래 디렉토리(서버 파일시스템)을 맵핑
+  }
 
 }
