--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    volumes:
+      - static:/home/app/web/static
     expose:
       - 8000
     entrypoint:
@@ -20,6 +22,8 @@ services:
   nginx:
     container_name: nginx
     build: ./config/nginx
+    volumes:
+      - static:/home/app/web/static
     ports:
       - "80:80"
     depends_on:
@@ -32,6 +36,8 @@ services:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data:rw
 
@@ -45,5 +51,6 @@ services:
       - redis_data:/data
 
 volumes:
+  static:
   postgres_data:
   redis_data:
