fixed(deploy): entrypoint and compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,10 @@
 
 version: "3"
 services:
-    postgres:
+  postgres:
     container_name: postgres
     image: postgres:13
+    restart: always
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
@@ -12,7 +13,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data:rw
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     container_name: redis
@@ -48,8 +49,6 @@ services:
       - "80:80"
     depends_on:
       - web
-
-  
 
 volumes:
   static:
