--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -12,9 +12,16 @@ server {
     proxy_set_header Host $host;
     proxy_redirect off;
   }
-  
-  location /static/ { # "/static/" 도메인에 도달하면 아래 alias를 수행
-    alias /home/app/web/static/; # 아래 디렉토리(서버 파일시스템)을 맵핑
-  }
 
+  location /ws {
+	proxy_pass http://127.0.0.1:8001;
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  proxy_redirect off;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Host $server_name;
+  }
 }
