--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,9 +41,6 @@ services:
 
   uvicorn:
     container_name: uvicorn
-    command:
-      - gunicorn peach_market.asgi:application -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:8001
-      - uvicorn --reload peach_market.asgi
     build:
       context: ./
       dockerfile: Dockerfile
@@ -51,6 +48,9 @@ services:
       - .env
     expose:
       - 8001
+    entrypoint:
+      - sh
+      - /home/app/web/config/docker/entrypoint-ws.prod.sh
 
   nginx:
     container_name: nginx
