hotfix(nginx): fixed nginx.conf

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -2,6 +2,10 @@ upstream peach_market {
   server 127.0.0.1:8000;
 }
 
+upstream peach_market_ws { 
+  server 127.0.0.1:8001;
+}
+
 server {
 
   listen 80;
@@ -14,7 +18,7 @@ server {
   }
 
   location /ws {
-	proxy_pass http://127.0.0.1:8001;
+	proxy_pass ws://peach_market_ws;
 	proxy_http_version 1.1;
 	proxy_set_header Upgrade $http_upgrade;
 	proxy_set_header Connection "upgrade";
