--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -18,7 +18,7 @@ server {
   }
 
   location /ws {
-	proxy_pass ws://peach_market_ws;
+  proxy_pass http://peach_market_ws;
 	proxy_http_version 1.1;
 	proxy_set_header Upgrade $http_upgrade;
 	proxy_set_header Connection "upgrade";
