--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,9 +1,9 @@
 upstream peach_market { 
-  server 127.0.0.1:8000;
+  server web:8000;
 }
 
 upstream peach_market_ws { 
-  server 127.0.0.1:8001;
+  server uvicorn:8001;
 }
 
 server {
@@ -21,7 +21,7 @@ server {
   proxy_pass http://peach_market_ws;
 	proxy_http_version 1.1;
 	proxy_set_header Upgrade $http_upgrade;
-	proxy_set_header Connection "upgrade";
+	proxy_set_header Connection "Upgrade";
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
