--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    ports:
+      - "8001:8001"
     expose:
       - 8001
     entrypoint:
