--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - NAME=web
     expose:
       - 8000
     entrypoint:
@@ -46,6 +48,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - NAME=uvicorn
     ports:
       - "8001:8001"
     expose:
