hotfix(docker): fixed docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,6 +57,8 @@ services:
     entrypoint:
       - sh
       - /home/app/daphne/config/docker/entrypoint-ws.prod.sh
+    depends_on:
+      - web
 
   nginx:
     container_name: nginx
@@ -65,6 +67,7 @@ services:
       - "80:80"
     depends_on:
       - web
+      - daphne
 
 volumes:
   postgres_data:
