--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,8 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
+      args:
+        APP_NAME: web
     env_file:
       - .env
     expose:
@@ -44,6 +46,8 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
+      args:
+        APP_NAME: uvicorn
     env_file:
       - .env
     ports:
@@ -52,7 +56,7 @@ services:
       - 8001
     entrypoint:
       - sh
-      - /home/app/web/config/docker/entrypoint-ws.prod.sh
+      - /home/app/uvicorn/config/docker/entrypoint-ws.prod.sh
 
   nginx:
     container_name: nginx
