fix(deploy): fixed proxy_pass nginx.conf

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,4 +1,8 @@
 upstream peach_market { 
+  server frontend:8080;
+}
+
+upstream peach_market_api { 
   server web:8000;
 }
 
@@ -11,6 +15,13 @@ server {
   listen 80;
 
   location / {
+    proxy_pass http://peach_market; 
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+  }
+
+  location /api {
     proxy_pass http://peach_market; 
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
