fix(deploy): fixed nginx.conf

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,7 +1,3 @@
-upstream peach_market { 
-  server frontend:8080;
-}
-
 upstream peach_market_api { 
   server web:8000;
 }
@@ -15,27 +11,25 @@ server {
   listen 80;
 
   location / {
-    proxy_pass http://peach_market; 
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
+    root /home/ubuntu/srv/frontend;
+    index index.html;
   }
 
   location /api {
-    proxy_pass http://peach_market; 
+    proxy_pass http://peach_market_api; 
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
   }
 
   location /ws {
-  proxy_pass http://peach_market_ws;
-	proxy_http_version 1.1;
-	proxy_set_header Upgrade $http_upgrade;
-	proxy_set_header Connection "Upgrade";
-  proxy_set_header Host $host;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header X-Forwarded-Host $server_name;
+    proxy_pass http://peach_market_ws;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $server_name;
   }
 }
