fix(deploy): fixed nginx.conf

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -11,7 +11,7 @@ server {
   listen 80;
 
   location / {
-    root /home/ubuntu/srv/frontend;
+    root /usr/share/nginx/html;
     index index.html;
   }
 
