--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,7 +65,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ../frontend/:/usr/share/nginx/html
+      - /home/ubuntu/srv/frontend:/usr/share/nginx/html
     depends_on:
       - web
       - uvicorn
